--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-gauge-component": "^1.2.64",
     "react-hot-toast": "^2.5.2"
