--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.52.1",
+    "ldrs": "^1.1.7",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "react": "19.1.0",
