--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "ldrs": "^1.1.7",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-gauge-component": "^1.2.64",
     "react-hot-toast": "^2.5.2"
   },
