--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.52.1",
+    "@supabase/supabase-js": "^2.53.0",
     "ldrs": "^1.1.7",
-    "lucide-react": "^0.525.0",
-    "next": "15.4.3",
-    "react": "^18.3.1",
+    "lucide-react": "^0.535.0",
+    "next": "^15.4.5",
+    "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.1",
     "react-gauge-component": "^1.2.64",
     "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "eslint": "^9.32.0",
+    "eslint-config-next": "15.4.5",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.9.2"
   }
 }
