--- a/package.json
+++ b/package.json
@@ -11,32 +11,24 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
-    "ag-charts-enterprise": "^12.1.0",
-    "ag-charts-react": "^12.1.0",
-    "apexcharts": "^5.3.2",
-    "d3": "^7.9.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "ldrs": "^1.1.7",
     "lucide-react": "^0.535.0",
     "next": "^15.4.5",
     "react": "^19.1.1",
-    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.1",
-    "react-gauge-component": "^1.2.64",
-    "react-hot-toast": "^2.5.2",
-    "react-simple-maps": "^3.0.0",
-    "react-tooltip": "^5.29.1",
-    "topojson-client": "^3.1.0"
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/geojson": "^7946.0.16",
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.32.0",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.2"
+    "typescript": "^5.8.3"
   }
 }
