--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
+    "@vercel/analytics": "^1.5.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "ldrs": "^1.1.7",
